--- a/hd-notary/src/App.css
+++ b/hd-notary/src/App.css
@@ -484,12 +484,18 @@ p {
   }
   
   .nav-links {
-    flex-direction: column;
-    gap: 0.8rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.5rem;
   }
   
   .nav-links li {
-    margin: 0;
+    margin: 0 0.5rem;
+  }
+  
+  .nav-links a {
+    font-size: 0.7rem;
+    padding: 0.3rem 0.2rem;
   }
 }
 
